# slas

./: .gitignore  .rhai-repl-history  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config
.github/workflows/: rust.yml  tests.yml
src/: backends.rs  dynamic_vec.rs  lib.rs  matrix_stable.rs  nullvec.rs  num.rs  prelude.rs  simd_lanes.rs  static_vec.rs  tags.rs  tensor.rs  traits.rs
src/backends/: blas.rs  rust.rs
src/experimental/: matrix.rs  tensor.rs
tests/: Cargo.toml  README.md  perf.data  perf.data.old
tests/src/: main.rs
