[package]
name = "slas"
version = "0.2.1"
edition = "2018"
authors = ["Aksel Mannstaedt <unic0rn9k@protonmail.com>"]
license = "Apache-2.0"

repository = "https://github.com/unic0rn9k/slas"
description = "Static Linear Algebra System"

keywords = ["matrix", "blas", "linearalgebra", "matrix", "vectors"]
categories = ["data-structures", "science", "mathematics"]

readme = "README.md"

[dependencies]
blis-src = { version = "0.2.0", features = ["system"], optional = true}
cblas-sys = "0.1.4"

[workspace]
members = ["tests"]

[features]
default = ["blis-sys"]
blis-sys = ["blis-src"]
