[package]
name = "slas"
version = "0.3.0"
edition = "2018"
authors = ["Aksel Mannstaedt <unic0rn9k@protonmail.com>"]
license = "Apache-2.0"

repository = "https://github.com/unic0rn9k/slas"
description = "Static Linear Algebra System"

keywords = ["matrix", "blas", "linearalgebra", "vectors"]
categories = ["data-structures", "science", "mathematics"]

readme = "README.md"

[dependencies]
blis-src = { version = "0.2.0", default-features = false, optional = true}
cblas-sys = { version = "0.1.4", optional = true }
levitate = "0.1.0"
paste = "1.0.6"

[dev-dependencies]
pretty_assertions = "1.0.0"

[workspace]
members = ["tests"]

[features]
default = ["blis-sys", "fast-floats"]
blis-sys = ["blis-src", "blis-src/system", "blas"]
blis-static = ["blis-src", "blis-src/static", "blas"]
blas = ["cblas-sys"]
fast-floats = ["levitate/fast-floats"]

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto=true
codegen-units = 1
