[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = {version = "1.4.0", optional = true}
nalgebra = {version = "0.29.0", optional = true}
ndarray = {version = "0.15.4", optional = true, features = ["blas"]}
rand = {version = "0.8.4", optional = true}
slas = {path = "../"}

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
versus = ["ndarray", "rand", "nalgebra", "lazy_static"]
